# wave_smith

./: .gitignore  Cargo.toml  some.py
examples/: listener-cli.rs  listener.rs  local_wave_io.rs  main_tester.rs  proto.rs  sender.rs  some_receiver.rs  some_sender.rs  test.rs  wave.rs  wave_in.rs  wave_out.rs
resources/docs/: reporte.docx
resources/temp/: morse_samples.txt
src/: config.rs  error.rs  lib.rs  morse.rs
src/audio/: buffer.rs  capture.rs  dev.rs  mod.rs  playback.rs  router.rs  signal.rs  wave.rs
src/encoding/: fsk.rs  mod.rs  morse.rs
src/lang/: mod.rs  morse.rs
src/proto/: frame.rs  mod.rs  packet.rs  segment.rs
